compiler/testData/asJava/lightClasses/compilationErrors/JvmPackageName.java
public final class B {
    public final int f(int j) { /* compiled code */ }

    public B() { /* compiled code */ }
}